[package]
name = "aoc-19"
version = "0.1.0"
authors = ["Daniel Gretarsson <danielgretars@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
itertools = "0.8.2"
num = "0.2.0"
petgraph = "0.4.13"
minifb = "0.13.0"
